<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tkivilius.projectapp.AddItemFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/background_with_shadow"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/addName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/inputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:inputType="text"
                android:paddingEnd="@dimen/input_padding"
                android:paddingLeft="@dimen/input_padding"
                android:paddingRight="@dimen/input_padding"
                android:paddingStart="@dimen/input_padding"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/addDesc"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:paddingEnd="@dimen/input_padding"
                android:paddingLeft="@dimen/input_padding"
                android:paddingRight="@dimen/input_padding"
                android:paddingStart="@dimen/input_padding"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/itemPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/addType"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/text_size" />

            <Spinner
                android:id="@+id/spinnerPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp" />

            <TextView
                android:id="@+id/itemReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/addReminder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/text_size" />

            <Spinner
                android:id="@+id/spinnerReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/background_with_shadow"
            android:orientation="vertical">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/photoTake"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo"
                    android:textSize="@dimen/text_size" />


                <Button
                    android:id="@+id/photoDelete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_photo"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/associated_picture"
                app:srcCompat="@drawable/no_img" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/addSave"
            android:textSize="@dimen/text_size" />

    </LinearLayout>
</ScrollView>
