...
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_with_shadow"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/default_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/detailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
...
